--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
     gap: 1em;
     padding: 1em;
 }
+
 .card-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, calc(150px + .5rem));
@@ -13,18 +14,25 @@
     margin: .5rem;
     box-sizing: border-box;
     border-radius: 1rem;
-    max-width: 100%;
-    display: flex;
-    gap: 1em;
     align-items: flex-start;
     flex-direction: row;
     grid-column: span 2;
 }
 
+.card,
+.card__image {
+    width: 300px;
+    aspect-ratio: 300/419;
+}
+
 .card.horizontal {
-    flex-direction: column;
     grid-column: span 3;
-    place-self: center;
+}
+
+.card.horizontal,
+.card.horizontal .card__image {
+    width: 419px;
+    aspect-ratio: 419/300;
 }
 
 .card-content {
@@ -32,21 +40,22 @@
 }
 
 .card-content,
-.card-image {
+.card__image {
     width: 300px;
 }
 
 .horizontal .card-content,
-.horizontal .card-image {
+.horizontal .card__image {
     width: 419px;
 }
 
-.card-image {
+.card__image {
     border-radius: 1rem;
     aspect-ratio: 300/419;
+    transition: 400ms filter linear;
 }
 
-.horizontal .card-image {
+.horizontal .card__image {
     aspect-ratio: 419/300;
 }
 
@@ -60,19 +69,66 @@ img {
     position: relative;
 }
 
+.card:hover .card__image {
+    filter: blur(2px);
+    transition: 400ms filter linear;
+}
 
-.card__actions {
-    transition: opacity 400ms ease-in-out;
+.card__content > header {
     opacity: 0;
-    top: 0;
+    left: 1em;
     right: 1em;
+    top: 0;
     position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 0.5em;
     transition: opacity 400ms ease-in-out, top 200ms ease-in;
 }
 
-.card:hover .card__actions {
-    top: 1em;
+.card__actions {
+    flex-shrink: 0;
+}
+
+.card__name {
+    background-color: white;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    flex-shrink: 1;
+    text-align: center;
+    font-weight: bold;
+}
+
+.card__content > main {
+    opacity: 0;
+    bottom: 0;
+    left: 1em;
+    right: 1em;
+    position: absolute;
+    transition: visibility 400ms, opacity 400ms ease-in-out, bottom 200ms ease-in, bottom 400ms ease-in;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5em;
+}
+
+.card:hover > .card__content > * {
     visibility: visible;
     opacity: 1;
-    transition: visibility 400ms, opacity 400ms ease-in-out, top 400ms ease-in;
+    transition: visibility 400ms, opacity 400ms ease-in-out, top 400ms ease-in, bottom 400ms ease-in;
+}
+
+.card:hover > .card__content > header {
+    top: 1em;
+}
+.card:hover > .card__content > main {
+    bottom: 2em;
+}
+
+.card__data__text {
+    border-radius: 0.5em;
+    border: 1px solid transparent;
+    padding: 0.5em;
+    background-color: white;
 }
