--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+img {
+    box-sizing: border-box;
+    display: block;
+    max-width: 100%;
+}
+
 .filters {
     display: flex;
     gap: 1em;
@@ -16,7 +22,9 @@
     }
 }
 
+/* Card block */
 .card {
+    position: relative;
     margin: auto;
     box-sizing: border-box;
     border-radius: 1rem;
@@ -26,103 +34,101 @@
     width: 300px;
     max-width: 100%;
     aspect-ratio: 300/419;
-
-    &.horizontal {
+    contain: content;
+    
+    /* Card horizontal modifier */
+    &.card--horizontal {
         width: 419px;
         aspect-ratio: 419/300;
     }
-}
 
-.card__image, .card__content {
-    border-radius: 1rem;
-    width: 100%;
-    height: 100%;
-}
+    &>* {
+        width: 100%;
+        height: 100%;
+    }
 
+    &:hover,
+    &.card--show-data /* Card show data modifier */{
+        & .card__image {
+            filter: blur(2px);
+            transition: 400ms filter linear;
+        }
 
-.card__content {
-    position: absolute;
-    top: 0;
-    left:0;
-    right: 0;
-    bottom: 0;
-}
+        & .card__content>* {
+            visibility: visible;
+            opacity: 1;
+            transition: visibility 400ms, opacity 400ms ease-in-out, top 400ms ease-in, bottom 400ms ease-in;
+        }
 
-.card__image {
-    transition: 400ms filter linear;
-}
+        & .card__content>header {
+            top: 1em;
+        }
 
-img {
-    box-sizing: border-box;
-    display: block;
-    max-width: 100%;
-}
+        & .card__content>main {
+            bottom: 2em;
+        }
+    }
 
-.card {
-    position: relative;
-}
+    /* Card image element */
+    .card__image {
+        transition: 400ms filter linear;
+    }
 
-.card:hover .card__image {
-    filter: blur(2px);
-    transition: 400ms filter linear;
-}
+    /* Card content element */
+    .card__content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
 
-.card__content>header {
-    opacity: 0;
-    left: 1em;
-    right: 1em;
-    top: 0;
-    position: absolute;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 0.5em;
-    transition: opacity 400ms ease-in-out, top 200ms ease-in;
-}
+        &>header {
+            opacity: 0;
+            left: 1em;
+            right: 1em;
+            top: 0;
+            position: absolute;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            gap: 0.5em;
+            transition: opacity 400ms ease-in-out, top 200ms ease-in;
+        }
 
-.card__actions {
-    flex-shrink: 0;
-}
+        &>main {
+            opacity: 0;
+            bottom: 0;
+            left: 1em;
+            right: 1em;
+            position: absolute;
+            transition: visibility 400ms, opacity 400ms ease-in-out, bottom 200ms ease-in, bottom 400ms ease-in;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 0.5em;
+        }
+    }
 
-.card__name {
-    background-color: white;
-    padding: 0.5em;
-    border-radius: 0.5em;
-    flex-shrink: 1;
-    text-align: center;
-    font-weight: bold;
-}
+    /* Card actions element */
+    .card__actions {
+        flex-shrink: 0;
+    }
 
-.card__content>main {
-    opacity: 0;
-    bottom: 0;
-    left: 1em;
-    right: 1em;
-    position: absolute;
-    transition: visibility 400ms, opacity 400ms ease-in-out, bottom 200ms ease-in, bottom 400ms ease-in;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5em;
-}
+    /* Card name element */
+    .card__name {
+        background-color: white;
+        padding: 0.5em;
+        border-radius: 0.5em;
+        flex-shrink: 1;
+        text-align: center;
+        font-weight: bold;
+    }
 
-.card:hover>.card__content>* {
-    visibility: visible;
-    opacity: 1;
-    transition: visibility 400ms, opacity 400ms ease-in-out, top 400ms ease-in, bottom 400ms ease-in;
-}
-
-.card:hover>.card__content>header {
-    top: 1em;
-}
-
-.card:hover>.card__content>main {
-    bottom: 2em;
-}
-
-.card__data__text {
-    border-radius: 0.5em;
-    border: 1px solid transparent;
-    padding: 0.5em;
-    background-color: white;
+    /* Card data text sub element */
+    .card__data__text {
+        border-radius: 0.5em;
+        border: 1px solid transparent;
+        padding: 0.5em;
+        background-color: white;
+    }
 }
