--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@ img {
     height: 100svh;
     display: grid;
     grid-template-rows: 1fr auto;
+
+    --box-shadow: box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 #root > main {
     overflow-y: auto;
@@ -39,6 +41,7 @@ img {
     border-radius: 1rem;
     align-items: flex-start;
     flex-direction: row;
+    background-color: transparent;
 
     width: 300px;
     max-width: 100%;
@@ -59,7 +62,7 @@ img {
     &:hover,
     &.card--show-data /* Card show data modifier */{
         & .card__image {
-            filter: blur(2px);
+            filter: blur(1px);
             transition: 400ms filter linear;
         }
 
@@ -70,7 +73,7 @@ img {
         }
 
         & .card__content>header {
-            top: 1em;
+            top: .5em;
         }
 
         & .card__content>main {
@@ -79,8 +82,38 @@ img {
     }
 
     /* Card image element */
-    .card__image {
+    .card__image, .lazy-load-image-loaded {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
         transition: 400ms filter linear;
+
+        &.front-image {
+            transform: rotateY(0deg);
+            transition: transform 400ms ease-out 400ms;
+        }
+        &.back-image {
+            transform: rotateY(-90deg);
+            transition: transform 400ms ease-in;
+        
+        }
+    }
+
+    &.card--flipped {
+        & .front-image {
+            transform: rotateY(90deg);
+            transition: transform 400ms ease-in;
+        
+        }
+    
+        & .back-image {
+            transform: rotateY(0deg);
+            transition: transform 400ms ease-out 400ms;
+        
+        }
+
     }
 
     /* Card content element */
@@ -93,14 +126,10 @@ img {
 
         &>header {
             opacity: 0;
-            left: 1em;
-            right: 1em;
+            left: .5em;
+            right: .5em;
             top: 0;
             position: absolute;
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            gap: 0.5em;
             transition: opacity 400ms ease-in-out, top 200ms ease-in;
         }
 
@@ -111,10 +140,6 @@ img {
             right: 1em;
             position: absolute;
             transition: visibility 400ms, opacity 400ms ease-in-out, bottom 200ms ease-in, bottom 400ms ease-in;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 0.5em;
         }
     }
 
@@ -124,10 +149,10 @@ img {
     }
 
     /* Card name element */
-    .card__name {
+    .card__name, .card__threat, .card__cost {
         background-color: white;
         padding: 0.5em;
-        border-radius: 0.5em;
+        border-radius: 0.25em;
         flex-shrink: 1;
         text-align: center;
         font-weight: bold;
@@ -140,4 +165,8 @@ img {
         padding: 0.5em;
         background-color: white;
     }
+}
+
+.shadowed {
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
