--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
 img {
     box-sizing: border-box;
     display: block;
@@ -184,6 +188,7 @@ img {
     position: absolute;
     top: 0;
     width: 400px;
+    max-width: 100%;
     transform: scale3d(0, 1, 1);
     transition: transform 400ms, left 400ms;
     z-index: 10;
@@ -249,4 +254,5 @@ img {
     top: 1em;
     right: 1.5em;
     transition: right 400ms;
+    z-index: 100;
 }
