--- a/src/App.css
+++ b/src/App.css
@@ -299,6 +299,8 @@ img {
 }
 
 #pagination-container {
+    position: sticky;
+    bottom: 0;
     z-index: 500;
     box-shadow: 0 -4px 4px #0000001C;
 
